[package]
name = "gotham-middleware-postgres"
version = "0.3.0"
authors = ["Christoph Wurst <christoph@winzerhof-wurst.at>"]

[dependencies]
futures = "0.1"
gotham = "0.2"
gotham_derive = "0.2"
tokio-core = "*"
tokio-postgres = "0.3.0"

[dev-dependencies]
futures-state-stream = "*"
hyper = "*"
log = "*"
mime = "*"
